[build-system]
requires = ['setuptools', 'Cython']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['pyOpenDRIVE']

[project]
name = 'pyopendrive'
authors = [
  {name = 'Florian K.', email='37000563+flok@users.noreply.github.com'}
]
version = '0.0.1.2'
requires-python = '>=3.9'
